# balyoo

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  fly.toml  pyproject.toml
.claude/skills/ingest-experience/: SKILL.md
.github/workflows/: ci.yml  deploy-pages.yml
docs/: ARCHITECTURE.md
examples/collections/books/: schema.json
examples/collections/books/items/: dune.json  lotr.json
examples/collections/movies/: schema.json
examples/collections/movies/items/: inception.json  matrix.json
tests/: conftest.py  test_chat.py  test_core_service.py  test_filesystem.py  test_ingest.py  test_mcp.py  test_mcp_http.py  test_rest.py  test_schema.py  test_sqlite.py  test_static_export.py
