[project]
name = "balyoo"
version = "0.1.0"
description = "Schema-first collections for humans and AI"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "collections-core",
    "collections-schema",
    "collections-filesystem",
    "collections-rest",
    "collections-static",
    "collections-cli",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]
# Placeholder packages (planned, docs only) have no pyproject.toml yet.
exclude = [
    "packages/collections-mcp",
    "packages/collections-ui",
    "packages/collections-sqlite",
    "packages/collections-postgres",
    "packages/collections-search-lunr",
    "packages/collections-auth-basic",
]

[tool.uv.sources]
collections-core = { workspace = true }
collections-schema = { workspace = true }
collections-filesystem = { workspace = true }
collections-rest = { workspace = true }
collections-static = { workspace = true }
collections-cli = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
